ipc/ipdl/test/ipdl/error/PasyncMessageListed.ipdl
//error: IPC message PasyncMessageListed::Msg is async, can be delisted

[ChildProc=any]
protocol PasyncMessageListed {
parent:
    async Msg();
};
